--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "styled-components": "^3.2.2",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -22,6 +24,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "redux-devtools": "^3.4.1"
   }
 }
