--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "socket.io-client": "^2.0.4",
     "styled-components": "^3.2.2",
     "uuid": "^3.2.1"
   },
